Add style with CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Importation des icones fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Guillaume Bertil CV</title>
 </head>
 
@@ -12,18 +14,43 @@
     <!-- En-tête du site -->
     <header>
         
-        <!-- Nom et prénom -->
-        <h1>Guillaume Bertil</h1>
+        <!-- Photo de profil -->
+        <div class="photo">
+            <figure>
+                <img src="./assets/img/photo-de-profil.jpg" alt="photo de profil">
+            </figure>
+        </div>
 
-        <!-- Métier -->
-        <h2>Développeur Web et Web Mobile</h2>
+        <!-- Infos -->
+        <div class="infos">
+            <!-- Nom et prénom -->
+            <h1>Guillaume Bertil</h1>
 
-        <!-- Contacts -->
-        <div class="contacts">
-            <a href="mailto:guillaume.bertil@gmail.com">Mail</a>
-            <a href="tel:+0612345678">Téléphone</a>
-            <a href="https://www.google.com/maps">Adresse</a>
-            <span id="permis">Permis B</span>
+            <!-- Métier -->
+            <h2>Développeur Web et Web Mobile</h2>
+
+            <!-- Contacts -->
+            <div class="contacts">
+                <span id="mail">
+                    <i class="fa-solid fa-envelope"></i>
+                    <a href="mailto:guillaume.bertil@gmail.com">Mail</a>
+                </span>
+
+                <span id="adresse">
+                    <i class="fa-solid fa-house"></i>
+                    <a href="https://www.google.com/maps">Adresse</a>
+                </span>
+
+                <span id="telephone">
+                    <i class="fa-solid fa-phone"></i>
+                    <a href="tel:+0612345678">Téléphone</a>
+                </span>
+
+                <span id="permis">
+                    <i class="fa-solid fa-car"></i>
+                    <span id="permis-b">Permis B</span>
+                </span>
+            </div>
         </div>
     </header>
 
@@ -37,7 +64,9 @@
                 <h2>Profil</h2>
                 <hr>
                 <p>
-                    Passionné par le développement web et web mobile, je suis un débutant motivé, avide d'apprendre et de relever de nouveaux défis. J'aime concevoir des interfaces intuitives et esthétiques tout en cherchant des solutions fonctionnelles et innovantes. Mon intérêt pour les technologies modernes me pousse à me tenir constamment à jour et à expérimenter de nouvelles approches pour créer des projets à la fois performants et attractifs.<br>
+                    Passionné par le développement web et web mobile, je suis un débutant motivé, avide d'apprendre et de relever de nouveaux défis. J'aime concevoir des interfaces intuitives et esthétiques tout en cherchant des solutions fonctionnelles et innovantes. Mon intérêt pour les technologies modernes me pousse à me tenir constamment à jour et à expérimenter de nouvelles approches pour créer des projets à la fois performants et attractifs.
+                </p>
+                <p>
                     Autonome et créatif, je sais organiser mon travail et mener des projets de manière efficace, tout en apportant ma touche personnelle à chaque réalisation. Je suis prêt à collaborer avec des équipes dynamiques, à contribuer à des projets ambitieux et à évoluer rapidement dans un environnement stimulant où mes compétences en développement web pourront pleinement s'exprimer.
                 </p>
             </article>
@@ -100,6 +129,7 @@
         <aside>
             <!-- Compétences -->
             <section class="competences">
+                <h2>Compétences</h2>
                 <ul>
                     <li class="competences-item">
                         <span class="competence-nom">HTML</span>
@@ -169,9 +199,15 @@
     <footer>
         <!-- Liens vers les réseaux sociaux -->
         <div class="reseaux-sociaux">
-            <a href="#" class="linkedin" aria-label="LinkedIn"></a>
-            <a href="#" class="github" aria-label="GitHub"></a>
-            <a href="#" class="instagram" aria-label="Instagram"></a>
+            <a href="#" class="linkedin" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="#" class="github" aria-label="GitHub">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="#" class="instagram" aria-label="Instagram">
+                <i class="fa-brands fa-square-instagram"></i>
+            </a>
         </div>
 
         <!-- Date de la dernière mise à jour -->
